Fix overflow-issue of Ticker scroll-linked xShift

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.FMT__container {
+  overflow: visible !important;
+}
